# ai-switcher

./: AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml
.serena/: project.yml
.serena/cache/rust/: document_symbols.pkl  raw_document_symbols.pkl
.serena/memories/: conventions.md  core.md  memory_maintenance.md  suggested_commands.md  task_completion.md  tech_stack.md  working_guide.md
scripts/: bump-version.mjs  release.mjs
scripts/msix/: AppxManifest.xml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: discord.rs  lib.rs  main.rs  tray.rs  types.rs  web.rs
src-tauri/src/api/: usage.rs
src-tauri/src/auth/: claude.rs  claude_desktop.rs  claude_oauth.rs  cursor.rs  mod.rs  oauth_server.rs  storage.rs  switcher.rs  token_refresh.rs
src-tauri/src/commands/: account.rs  account_stats.rs  discord.rs  mod.rs  oauth.rs  process.rs  tool_process.rs  usage.rs  window.rs
src/components/: AccountCard.tsx  AccountUsageStats.tsx  AddAccountModal.tsx  AppFooter.tsx  TitleBar.tsx  UpdateChecker.tsx  UsageBar.tsx  index.ts
src/components/ui/: alert-dialog.tsx  alert.tsx  badge.tsx  button.tsx  sonner.tsx
src/hooks/: useAccounts.ts  useForceCloseCodexProcesses.ts
src/lib/: platform.ts
src/types/: index.ts
