[package]
name = "ai-switcher"
version = "0.0.0"
description = "A multi-account manager for AI CLIs"
authors = ["AariyJP"]
edition = "2021"
default-run = "ai-switcher"

[lib]
name = "ai_switcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.7"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
tiny_http = "0.12"
webbrowser = "1"
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
thiserror = "2"
anyhow = "1"
urlencoding = "2"
futures = "0.3"
url = "2"
flate2 = "1"
chacha20poly1305 = "0.10"
pbkdf2 = "0.12"
aes-gcm = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
discord-rich-presence = "1.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }
sha1 = "0.10"
